k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fast-food-api
  labels:
    name: fast-food-api
    environment: production
