k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fast-food-api-service
  namespace: fast-food-api
  labels:
    app: fast-food-api
spec:
  selector:
    app: fast-food-api
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
